fixed set interval of time on jumping man and monster

--- a/jumpingGame.css
+++ b/jumpingGame.css
@@ -11,34 +11,23 @@ body {
   width: 13%;
   height: 16%;
   position: absolute;
-  bottom: 12%;
-  left: 20%;
-}
-@keyframes jump {
-    0% {bottom: 12%;}
-    50% {bottom: 50%;}
-    100% {bottom: 12%;}
-}
-.jumpMan {
-    animation: jump;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-}
-.moveRight{
-    left: 30%;
+  bottom: 80px;
+  left: 300px;
 }
 
 .mosterRunning{
-    width: 15%;
-    height: 18%;
+    width: 13%;
+    height: 15%;
     position: absolute;
     bottom: 10%;
     right: -20px;
-    animation: monster 5s linear infinite;
+    animation: monster 2.5s linear infinite;
+    /* background-color: aqua; */
+    border-radius: 40%;
 }
 
 @keyframes monster {
     0% {right: -20;}
-    100%{right: 101%;}
+    100%{right: 104%;}
 }
 
